--- a/recipe/param.yaml
+++ b/recipe/param.yaml
@@ -9,7 +9,20 @@ rovi:
       Gain: 0
     projector:
       Intencity: 255
+
 cropper:
   cropR: 201
   cropZ: 800
   mesh: 1.0
+
+searcher:
+  radius_normal: 2.0
+  radius_feature: 5.0
+  maxnn_normal: 30
+  maxnn_feature: 100
+  distance_threshold: 1.5
+  icp_threshold: 5.0
+
+picker:
+  zDiff: 0.3
+  zRot: 3.14
