conforming to naming rule

--- a/config.yaml
+++ b/config.yaml
@@ -6,6 +6,7 @@ config:
     scene_frame_id: ["camera/capture0"]
     master_frame_id: ["camera/master0"]
     place_frame_id: "camera/capture0"
+    tf_delay: 0.1
   cropper:
     capture_frame_id: "camera"
     source_frame_id: "camera/capture"
