--- a/config.yaml
+++ b/config.yaml
@@ -11,7 +11,7 @@ config:
     capture_frame_id: "camera"
     source_frame_id: "camera/capture"
     frame_id: "camera/capture0"
-    relay: "/filer/load"
+    relay: "/rovi/X1"
   picker:
     start_frame_id: "master/camera0"
     goal_frame_id: "solve"
