--- a/recipe/camera_master0.yaml
+++ b/recipe/camera_master0.yaml
@@ -1,9 +1,3 @@
-translation:
-  x: 0
-  y: 0
-  z: 0
-rotation:
-  x: 0
-  y: 0
-  z: 0
-  w: 1
+rotation: {w: 0.010058884222134842, x: -0.4276603615890691, y: -0.9017644107717598,
+  z: 0.06185775164984319}
+translation: {x: -0.4119708150587337, y: -0.2367120293165259, z: 0.4378620433697213}
