--- a/recipe/param.yaml
+++ b/recipe/param.yaml
@@ -1,3 +1,10 @@
+cropper:
+  cropR: 0.2
+  cropZ: 0.59
+  mesh: 0.001
+picker:
+  zDiff: 0.3
+  zRot: 3.14
 rovi:
   live:
     camera:
@@ -9,20 +16,11 @@ rovi:
       Gain: 0
     projector:
       Intencity: 255
-
-cropper:
-  cropR: 201
-  cropZ: 800
-  mesh: 1.0
-
+      Mode: ''
 searcher:
-  radius_normal: 2.0
-  radius_feature: 5.0
-  maxnn_normal: 30
-  maxnn_feature: 100
   distance_threshold: 1.5
   icp_threshold: 5.0
-
-picker:
-  zDiff: 0.3
-  zRot: 3.14
+  maxnn_feature: 100
+  maxnn_normal: 30
+  radius_feature: 5.0
+  radius_normal: 2.0
