--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,6 @@
 config:
-  frame:
-    frame_id: "camera/capture0"
   searcher:
-    lines: ["surface"]
+    scenes: ["surface"]
     scene_frame_id: ["camera/capture0"]
     master_frame_id: ["camera/master0"]
     place_frame_id: "camera/capture0"
