--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,8 @@ config:
     scenes: ["surface"]
     scene_frame_id: ["camera/capture0"]
     master_frame_id: ["camera/master0"]
-    place_frame_id: "camera/capture0"
+    solve_frame_id: "camera/capture0"
+    org_frame_id: "camera/master0"
     tf_delay: 0.1
   cropper:
     capture_frame_id: "camera"
