changed to launch via dashboard

--- a/dashboard.yaml
+++ b/dashboard.yaml
@@ -1,26 +1,1 @@
-config:
-  dashboard:
-    geometry: "800x85+0-40"
-    launch1:
-      note: "カメラドライバ"
-      package: rovi
-      file: ycam3sxga_m.launch
-      delay: 0
-    launch2:
-      note: "ロボットドライバ"
-      package: rovi_industrial
-      file: demo.launch
-      delay: 0
-    launch3:
-      note: "visual teaching playback"
-      package: rovi_master_teach
-      file: main.launch
-      delay: 10
-    launch4:
-      note: "robot-camera calibration"
-      package: rovi_utils
-      file: rcalib.launch
-    launch5:
-      note: "マスター登録"
-      package: rovi_master_teach
-      file: setup.launch
+dashboard.d/demo.yaml
