--- a/dashboard.d/demo.yaml
+++ b/dashboard.d/demo.yaml
@@ -1,6 +1,7 @@
 config:
   dashboard:
     confirm: "強制停止します"
+    fontsize: 10
     launch3:
       label: "VT(demo)"
       package: rovi_master_teach
@@ -17,4 +18,13 @@ config:
       file: viewer.launch
       confirm: True
       auto: 2
-
+    indicator1:
+      label: "YCAM"
+      topic: /rovi/stat
+      type: std_msgs/Bool
+      timeout: 2
+    indicator2:
+      label: "通信"
+      topic: /robo/stat
+      type: std_msgs/Bool
+      timeout: 2
