--- a/dashboard.d/rv4f_sxga.yaml
+++ b/dashboard.d/rv4f_sxga.yaml
@@ -2,33 +2,33 @@ config:
   dashboard:
     confirm: "強制停止します"
     fontsize: 10
-    launch1:
+    launch_ycam:
       label: "カメラドライバ"
       package: rovi
       file: ycam3sxga.launch
       confirm: True
       auto: 0
-    launch2:
+    launch_rsock:
       label: "ロボットドライバ"
       package: rovi_industrial
       file: rv4f.launch
       confirm: True
       auto: 6
-    launch3:
+    launch_vt:
       label: "  VT  "
       package: rovi_master_teach
       file: main.launch
       confirm: True
       auto: 8
-    launch4:
+    launch_rcalib:
       label: "キャリブレーション"
       package: rovi_utils
       file: rcalib.launch
-    launch5:
+    launch_setup:
       label: "セットアップ"
       package: rovi_master_teach
       file: setup.launch
-    launch6:
+    launch_viewer:
       label: "Viewer"
       package: rovi_master_teach
       file: viewer.launch
