--- a/dashboard.yaml
+++ b/dashboard.yaml
@@ -1,1 +1,8 @@
-dashboard.d/demo.yaml
+config:
+  dashboard:
+    package: rovi_master_teach
+    load: demo.yaml
+    altitude: '+0'
+    launch_rsock:
+      args:
+        address: '111.222.333.444'
