バリエーション対応版

--- a/config.yaml
+++ b/config.yaml
@@ -14,4 +14,7 @@ config:
     relay: "/rovi/X1"
   picker:
     frame_id: "pick"
-
+  rsocket:
+    base_frame_id: world
+    source_frame_id: camera/master0
+    target_frame_id: camera/capture0/solve0
