--- a/rc.d/rv4f_sxga.yaml
+++ b/rc.d/rv4f_sxga.yaml
@@ -17,8 +17,10 @@ config:
       file: setup.launch
     launch_viewer:
       file: viewer.launch
+
   rsocket:
     update_frame_id: J6
+    reverse_frame_id: J5
 
 config_tf:
   camera:
@@ -27,3 +29,5 @@ config_tf:
     parent_frame_id: J6
   J6:
     parent_frame_id: world
+  J5:
+    parent_frame_id: J6
