ansback from rovi added to cropper sequence diagram to catpure added

--- a/config.yaml
+++ b/config.yaml
@@ -12,6 +12,7 @@ config:
     source_frame_id: "camera/capture"
     frame_id: "camera/capture0"
     relay: "/rovi/X1"
+    ansback: "/rovi/Y1"
   picker:
     frame_id: "pick"
   rsocket:
