--- a/dashboard.yaml
+++ b/dashboard.yaml
@@ -1,6 +1,6 @@
 config:
   dashboard:
-    load: rovi_master_teach/rc.d/ur5_sxga.yaml
+    load: rovi_master_teach/rc.d/ur5_sxga_J7.yaml
     recipe:
       link: rovi_master_teach/recipe
       dir: rovi_master_teach/recipe.d
@@ -56,11 +56,11 @@ config:
       timeout: 2
     indicator2:
       label: "通信"
-      topic: /robo/stat
+      topic: /rsocket/stat
       type: std_msgs/Bool
       timeout: 2
     indicator3:
-      label: "SOLVER"
+      label: "解析"
       topic: /searcher/stat
       type: std_msgs/Bool
       timeout: 2
