--- a/rc.d/kw_sxga.yaml
+++ b/rc.d/kw_sxga.yaml
@@ -3,11 +3,10 @@ config:
     launch_ycam:
       file: ycam3sxga.launch
     launch_rsock:
-      file: melfa.launch
+      file: kw.launch
   rsocket:
-    port: 3000
+    port: 8888
     update_frame_id: J6
-    reverse_frame_id: J5
 
 config_tf:
   camera:
@@ -16,5 +15,4 @@ config_tf:
     parent_frame_id: J6
   J6:
     parent_frame_id: world
-  J5:
-    parent_frame_id: J6
+
