--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 config:
   searcher:
-    solver: "zhou_solver"
+    solver: "ransac_solver"
     scenes: ["surface"]
     scene_frame_id: ["camera/capture0"]
     master_frame_id: ["camera/master0"]
