--- a/recipe.d/10/param.yaml
+++ b/recipe.d/10/param.yaml
@@ -4,6 +4,8 @@ cropper:
   ladC: 0
   ladW: 6000
   mesh: 0.001
+  nfmin: 0
+  nfrad: 0
 picker:
   azimuth:
     max: 1
@@ -11,6 +13,9 @@ picker:
   fitness:
     max: 1
     min: 0.7
+  rmse:
+    max: 5
+    min: 0
 rovi:
   live:
     camera:
@@ -24,9 +29,11 @@ rovi:
       Intencity: 150
       Mode: 1
 searcher:
-  distance_threshold: 0.1
-  feature_max_nn: 100
+  distance_threshold: 0.002
+  feature_mesh: 0.002
   feature_radius: 0.03
   icp_threshold: 0.005
-  normal_max_nn: 30
+  normal_min_nn: 0
   normal_radius: 0.01
+  repeat: 3
+  rotate: 0
