--- a/recipe.d/12/param.yaml
+++ b/recipe.d/12/param.yaml
@@ -4,6 +4,8 @@ cropper:
   ladC: 0
   ladW: 0
   mesh: 1
+  nfmin: 0
+  nfrad: 0
 picker:
   azimuth:
     max: 2
@@ -28,8 +30,10 @@ rovi:
       Mode: 1
 searcher:
   distance_threshold: 3
-  feature_max_nn: 100
+  feature_mesh: 2
   feature_radius: 25
-  icp_threshold: 2
-  normal_max_nn: 30
+  icp_threshold: 1
+  normal_min_nn: 0
   normal_radius: 10
+  repeat: 3
+  rotate: 0
