--- a/rc.d/kw.yaml
+++ b/rc.d/kw.yaml
@@ -1,19 +1,16 @@
 config:
   dashboard:
-    launch_ycam:
+    launch_vga:
+      file: ycam3vga.launch
+    launch_sxga:
       file: ycam3sxga.launch
     launch_rsock:
       file: kw.launch
   rsocket:
     port: 8888
-    update_frame_id: J6
+    update_frame_id: tool0_controller
 
 config_tf:
-  camera:
-    parent_frame_id: J6
-  flange:
-    parent_frame_id: J6
-  J6:
-    parent_frame_id: base
   base:
     parent_frame_id: world
+
