--- a/rc.d/ur5.yaml
+++ b/rc.d/ur5.yaml
@@ -1,6 +1,8 @@
 config:
   dashboard:
-    launch_ycam:
+    launch_vga:
+      file: ycam3vga_m.launch
+    launch_sxga:
       file: ycam3sxga_m.launch
     launch_rsock:
       file: ur.launch
@@ -11,8 +13,6 @@ config:
     port: 3000
 
 config_tf:
-  camera:
-   parent_frame_id: tool0
-  flange:
-    parent_frame_id: tool0
+  base:
+    parent_frame_id: world
 
