--- a/rc.d/rv4f.yaml
+++ b/rc.d/rv4f.yaml
@@ -1,20 +1,17 @@
 config:
   dashboard:
-    launch_ycam:
+    launch_vga:
+      file: ycam3vga.launch
+    launch_sxga:
       file: ycam3sxga.launch
     launch_rsock:
       file: melfa.launch
       address: 192.168.0.20
   rsocket:
     port: 3000
-    update_frame_id: J6
+    update_frame_id: tool0_controller
 
 config_tf:
-  camera:
-    parent_frame_id: J6
-  flange:
-    parent_frame_id: J6
-  J6:
-    parent_frame_id: base
   base:
     parent_frame_id: world
+
