--- a/recipe.d/11/param.yaml
+++ b/recipe.d/11/param.yaml
@@ -1,11 +1,13 @@
 cropper:
   cropR: 0.08
+  cropR2: 0.08
   cropZ: 0.42
   ladC: 100000
   ladW: 0
-  mesh: 1.0
+  ladW2: 30000
+  mesh: 0.001
   nfmin: 0
-  nfrad: 0
+  nfrad: 0.005
 picker:
   azimuth:
     max: 1
@@ -30,10 +32,10 @@ rovi:
       Mode: ''
 searcher:
   distance_threshold: 1.5
-  feature_mesh: 0.002
+  feature_mesh: 0.004
   feature_radius: 5.0
   icp_threshold: 5.0
-  normal_min_nn: 25
+  normal_min_nn: 0
   normal_radius: 2.0
-  repeat: 3
+  repeat: 5
   rotate: 0
