--- a/recipe.d/12/param.yaml
+++ b/recipe.d/12/param.yaml
@@ -1,14 +1,16 @@
 cropper:
-  cropR: 3000
-  cropZ: 800
+  cropR: 0
+  cropR2: 0.08
+  cropZ: 0
   ladC: 0
   ladW: 0
-  mesh: 1
+  ladW2: 30000
+  mesh: 0.001
   nfmin: 0
-  nfrad: 0
+  nfrad: 0.005
 picker:
   azimuth:
-    max: 2
+    max: 1
     min: 0
   fitness:
     max: 1
@@ -20,20 +22,20 @@ rovi:
   live:
     camera:
       ExposureTime: 30000
-      Gain: 100
+      Gain: 50
   pshift_genpc:
     camera:
-      ExposureTime: 16800
+      ExposureTime: 8400
       Gain: 0
     projector:
-      Intencity: 200
+      Intencity: 150
       Mode: 1
 searcher:
-  distance_threshold: 3
-  feature_mesh: 2
-  feature_radius: 25
-  icp_threshold: 1
+  distance_threshold: 0.01
+  feature_mesh: 0.002
+  feature_radius: 0.004
+  icp_threshold: 0.001
   normal_min_nn: 0
-  normal_radius: 10
-  repeat: 3
-  rotate: 0
+  normal_radius: 0.003
+  repeat: 5
+  rotate: 1
