Added robot_ip as a parameter melfa_robot/robot_ip

--- a/rc.d/melfa.yaml
+++ b/rc.d/melfa.yaml
@@ -6,10 +6,14 @@ config:
       file: ycam3sxga.launch
     launch_rsock:
       file: melfa.launch
+#      file: melfa_rv4f.launch
       address: "192.168.221.239"
   rsocket:
     port: 10002
     update_frame_id: tool0_controller
+
+melfa_driver:
+  robot_ip: 192.168.221.10
 
 config_tf:
   base:
