--- a/rc.d/melfa.yaml
+++ b/rc.d/melfa.yaml
@@ -5,15 +5,16 @@ config:
     launch_sxga:
       file: ycam3sxga.launch
     launch_rsock:
-      file: melfa_rv4f.launch
+      file: melfa_rv4fl.launch
   rsocket:
     port: 10002
     update_frame_id: tool0_controller
-
-melfa_driver:
-  robot_ip: 192.168.221.239
+    robot_ip: 192.168.221.239
+    robot_port: [12000,12001]
 
 config_tf:
+  mount:
+    parent_frame_id: tool0
   base:
     parent_frame_id: world
 
