使い勝手等変更

--- a/rc.d/dummy.yaml
+++ b/rc.d/dummy.yaml
@@ -1,9 +1,9 @@
 config:
   dashboard:
     launch_vga:
-      file: ycam3vga_m.launch
+      file: ycam3vga.launch
     launch_sxga:
-      file: ycam3sxga_m.launch
+      file: ycam3sxga.launch
     launch_rsock:
       file: dummy.launch
   rsocket:
@@ -11,7 +11,7 @@ config:
     update_frame_id: tool0_controller
 
 config_tf:
-  flange:
-    parent_frame_id: tool0
+  base:
+    parent_frame_id: world
   mount:
-    parent_frame_id: tool0
+    parent_frame_id: base
