--- a/dashboard.yaml
+++ b/dashboard.yaml
@@ -1,6 +1,6 @@
 config:
   dashboard:
-    load: rovi_visual_teach/rc.d/motoman.yaml
+    load: rovi_visual_teach/rc.d/dummy.yaml
     recipe:
       link: rovi_visual_teach/recipe
       dir: rovi_visual_teach/recipe.d
@@ -18,11 +18,11 @@ config:
       label: "カメラドライバ(VGA)"
       package: rovi
       confirm: True
-      auto: 1
     launch_sxga:
       label: "カメラドライバ(SXGA)"
       package: rovi
       confirm: True
+      auto: 1
     launch_rsock:
       label: "ロボットドライバ"
       package: rovi_industrial
