--- a/recipe.d/11/param.yaml
+++ b/recipe.d/11/param.yaml
@@ -25,7 +25,7 @@ rovi:
       ExposureTime: 8400
       Gain: 0
     projector:
-      Intencity: 255
+      Intensity: 255
       Mode: ''
 searcher:
   distance_threshold: 1.5
