--- a/recipe.d/12/param.yaml
+++ b/recipe.d/12/param.yaml
@@ -28,7 +28,7 @@ rovi:
       ExposureTime: 8400
       Gain: 0
     projector:
-      Intencity: 80
+      Intensity: 80
       Mode: 1
 searcher:
   distance_threshold: 20
