--- a/recipe.d/10/param.yaml
+++ b/recipe.d/10/param.yaml
@@ -26,7 +26,7 @@ rovi:
       ExposureTime: 8400
       Gain: 0
     projector:
-      Intencity: 150
+      Intensity: 150
       Mode: 1
 searcher:
   distance_threshold: 0.1
