--- a/conf.d/config.yaml
+++ b/conf.d/config.yaml
@@ -3,15 +3,15 @@ config:
     proc: 0
     solver: "ransac_solver"
     scenes: ["surface"]
-    scene_frame_id: ["camera/capture0"]
-    master_frame_id: ["camera/master0"]
+    scene_frame_ids: ["camera/capture0"]
+    master_frame_ids: ["camera/master0"]
     solve_frame_id: "camera/capture0"
   searcher1:
     proc: 1
     solver: "zhou_solver"
     scenes: ["surface"]
-    scene_frame_id: ["camera/capture0"]
-    master_frame_id: ["camera/master0"]
+    scene_frame_ids: ["camera/capture0"]
+    master_frame_ids: ["camera/master0"]
   cropper:
     capture_frame_id: "camera"
     source_frame_id: "camera/capture"
@@ -31,3 +31,5 @@ config:
     base_frame_id: base
     source_frame_id: camera/master0
     target_frame_id: camera/capture0/solve0
+    update_frame_id: tool0_controller
+
