--- a/recipe.d/10/camera_master0.yaml
+++ b/recipe.d/10/camera_master0.yaml
@@ -1,9 +1,3 @@
-translation:
-  x: 0
-  y: 0
-  z: 0
-rotation:
-  x: 0
-  y: 0
-  z: 0
-  w: 1
+rotation: {w: -0.019658521637419563, x: 0.7026936325550978, y: -0.7109334775581564,
+  z: 0.02021859987459378}
+translation: {x: 527.603790597461, y: 46.836779462494704, z: 628.571721666663}
