--- a/recipe.d/12/param.yaml
+++ b/recipe.d/12/param.yaml
@@ -20,9 +20,12 @@ picker:
     min: 0
 rovi:
   live:
-    paramsetN: 1
+    camera:
+      ExposureTime: 30000
   pshift_genpc:
     paramsetN: 1
+    projector:
+      Intensity: 120
 searcher:
   distance_threshold: 20
   feature_mesh: 3
