Modified to fit to FW2 and ROVI-C

--- a/conf.d/config.yaml
+++ b/conf.d/config.yaml
@@ -23,10 +23,11 @@ config:
     solve_frame_id: "camera/capture0"
   report:
     "altitude": -25
+    "width": 1920
     "rows": 4
     recipe: /dashboard/recipe
-    keys: ["fitness","rmse","azimuth","rotation","Tx","Ty","Tz","tfeat","tmatch"]
-    labels: ["Fitness","RMSE","Azimuth","Rotation","Shift X","Shift Y","Shift Z","Tfeat","Tmatch"]
+    keys: ["fitness","rmse","azimuth","rotation","Tx","Ty","Tz","tcap","tfeat","tmatch","mean","stddev","median","mode"]
+    labels: ["Fitness","RMSE","Azimuth","Rotation","Shift X","Shift Y","Shift Z","Tcap","Tfeat","Tmatch","Mean","Stddev","Median","Mode"]
   rsocket:
     base_frame_id: base
     source_frame_id: camera/master0
