--- a/conf.d/config.yaml
+++ b/conf.d/config.yaml
@@ -26,8 +26,8 @@ config:
     "width": 1920
     "rows": 4
     recipe: /dashboard/recipe
-    keys: ["fitness","rmse","azimuth","rotation","Tx","Ty","Tz","tcap","tfeat","tmatch","mean","stddev","median","mode"]
-    labels: ["Fitness","RMSE","Azimuth","Rotation","Shift X","Shift Y","Shift Z","Tcap","Tfeat","Tmatch","Mean","Stddev","Median","Mode"]
+    keys: ["pcount","fitness","rmse","azimuth","rotation","Tx","Ty","Tz","tcap","tfeat","tmatch","mean","stddev","median","mode"]
+    labels: ["Points","Fitness","RMSE","Azimuth","Rotation","Shift X","Shift Y","Shift Z","Tcap","Tfeat","Tmatch","Mean","Stddev","Median","Mode"]
   rsocket:
     base_frame_id: base
     source_frame_id: camera/master0
