--- a/rc.d/dummy.yaml
+++ b/rc.d/dummy.yaml
@@ -5,8 +5,16 @@ config:
     launch_sxga:
       file: dummy.launch
     launch_rsock:
-      file: mz07.launch
+      file: melfa_rv4fl.launch
   rsocket:
     reverse_frame_id: mount
     update_frame_id: tool0_controller
-
+  rsocket:
+    port: 10002
+    update_frame_id: tool0_controller
+    robot_ip: 192.168.221.239
+    robot_port: [12000,12001]
+    preproc: "rosrun rovi_industrial revolve.py"
+    target_frame_id: camera/capture0/solve0/revolve
+#    reverse_frame_id: mount
+#    reverse_direction: -1
